--- a/base-jenkins/.kitchen.yml
+++ b/base-jenkins/.kitchen.yml
@@ -34,12 +34,23 @@ suites:
         server:
           plugins:
             - name: scripttrigger
-              version: "0.28"
+              version: '0.28'
+            - name: email-ext
+              version: '2.35.1'
         http_proxy:
           host_name: localhost
           listen_port: 8080
         global_vars:
           region: us-east-1
+          domain: dummyjenkins.com
+        email:
+          username: ses_user
+          secret_key: ses_secret_key
+          admin_email_address: admin@dummyjenkins.com
+          smtp_server: email-smtp.us-east-1.amazonaws.com
+          smtp_port: '587'
+          jenkins_url: http://localhost:8080
+
       jenkins_security:
         authz_strategy: none
 
@@ -66,7 +77,7 @@ suites:
         server:
           plugins:
             - name: scripttrigger
-              version: "0.28"
+              version: '0.28'
         http_proxy:
           host_name: localhost
           listen_port: 8080
